--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -44,14 +47,13 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
 
       - uses: edge/simple-slack-notify@v1.1.1
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: failure()
         with:
           channel: '#continuous-integration'
           status: ${{ job.status }}
-          success_text: '${env.GITHUB_WORKFLOW} (${env.GITHUB_RUN_NUMBER}) build completed successfully'
-          failure_text: '${env.GITHUB_WORKFLOW} (${env.GITHUB_RUN_NUMBER}) build failed'
-          cancelled_text: '${env.GITHUB_WORKFLOW} (${env.GITHUB_RUN_NUMBER}) build was cancelled'
+          success_text: 'eBL frontend  build #${env.GITHUB_RUN_NUMBER} build completed successfully.'
+          failure_text: 'eBL frontend  build #${env.GITHUB_RUN_NUMBER} failed.'
+          cancelled_text: 'eBL frontend  build #${env.GITHUB_RUN_NUMBER} build was cancelled.'
           fields: |
             [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
              {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
@@ -63,9 +65,23 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
+        
       - uses: akhileshns/heroku-deploy@v3.6.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name:  ${{secrets.HEROKU_APP_NAME}}
           heroku_email:  ${{secrets.HEROKU_EMAIL}}
           healthcheck: "https://www.ebabylon.org"
+
+      - uses: edge/simple-slack-notify@v1.1.1
+        if: always()
+        with:
+          channel: '#continuous-integration'
+          status: ${{ job.status }}
+          success_text: 'Deploying eBL frontend build #${env.GITHUB_RUN_NUMBER} to Heroku completed successfully.'
+          failure_text: 'Deploying eBL frontend build #${env.GITHUB_RUN_NUMBER} to Heroku failed.'
+          cancelled_text: 'Deploying eBL frontend build #${env.GITHUB_RUN_NUMBER} to Heroku build was cancelled.'
+          fields: |
+            [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
+             {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
+             {"title": "Action URL", "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}"}]
