--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "iconv-lite": "^0.6.2",
     "immer": "^8.0.1",
     "jquery": "^3.5.1",
+    "jspdf": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "moment": "^2.22.2",
@@ -92,6 +93,7 @@
     "@testing-library/user-event": "^12.1.3",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "canvas": "^2.6.1",
     "chance": "^1.0.16",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-react": "^1.1.7",
