--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,3 +85,43 @@ jobs:
             [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
              {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
              {"title": "Action URL", "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}"}]
+
+  docker:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: docker/setup-buildx-action@v1
+        
+      - uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          build-args: |
+            REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
+            REACT_APP_AUTH0_REDIRECT_URI=https://www.ebabylon.org
+            REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
+            REACT_APP_AUTH0_RETURN_TO=https://www.ebabylon.org
+            REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
+            REACT_APP_DICTIONARY_API_URL=https://api.cluster.ebabylon.org
+            REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
+          push: true
+          tags: |
+            jlaasonen/ebl-frontend:test
+            ${{format('jlaasonen/ebl-frontend:test.{0}', github.run_number)}}
+      
+      - uses: edge/simple-slack-notify@v1.1.1
+        if: always()
+        with:
+          channel: '#continuous-integration'
+          status: ${{ job.status }}
+          success_text: 'Building eBL frontend image #${env.GITHUB_RUN_NUMBER} completed successfully.'
+          failure_text: 'Building eBL frontend image #${env.GITHUB_RUN_NUMBER} failed.'
+          cancelled_text: 'Building eBL frontend image #${env.GITHUB_RUN_NUMBER} was cancelled.'
+          fields: |
+            [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
+             {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
+             {"title": "Action URL", "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}"}]
