--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
 
       - id: docker_build
         uses: docker/build-push-action@v2
-        with:
+        with:        
           build-args: |
             REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
             REACT_APP_AUTH0_REDIRECT_URI=https://www.ebabylon.org
@@ -108,6 +108,7 @@ jobs:
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
             REACT_APP_DICTIONARY_API_URL=https://api.cluster.ebabylon.org
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
+          no-cache:  true
           push: true
           tags: |
             jlaasonen/ebl-frontend:test
