--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.0.4",
+    "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
     "typescript": "^4.0.2"
   },
