--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,8 +70,9 @@ jobs:
         
       - uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: registry.cluster.ebabylon.org
+          username: ${{ secrets.EBL_REGISTRY_USERNAME }}
+          password: ${{ secrets.EBL_REGISTRY_PASSWORD }}
 
       - id: docker_build
         uses: docker/build-push-action@v2
@@ -88,8 +89,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            jlaasonen/ebl-frontend:master
-            ${{format('jlaasonen/ebl-frontend:master.{0}', github.run_number)}}
+            registry.cluster.ebabylon.org/ebl-frontend:master
+            ${{format('registry.cluster.ebabylon.org/ebl-frontend:master.{0}', github.run_number)}}
       
       - uses: edge/simple-slack-notify@v1.1.1
         if: always()
