--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,3 +104,45 @@ jobs:
             [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
              {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
              {"title": "Action URL", "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}"}]
+
+  docker-test: 
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: docker/setup-buildx-action@v1
+        
+      - uses: docker/login-action@v1 
+        with:
+          registry: registry.cluster.ebabylon.org
+          username: ${{ secrets.EBL_REGISTRY_USERNAME }}
+          password: ${{ secrets.EBL_REGISTRY_PASSWORD }}
+
+      - id: docker_build
+        uses: docker/build-push-action@v2
+        with:        
+          build-args: |
+            REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
+            REACT_APP_AUTH0_REDIRECT_URI=https://www.cluster.ebabylon.org
+            REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
+            REACT_APP_AUTH0_RETURN_TO=https://www.cluster.ebabylon.org
+            REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
+            REACT_APP_DICTIONARY_API_URL=https://api.clustes.ebabylon.org
+            REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            registry.cluster.ebabylon.org/ebl-frontend:test
+      
+      - uses: edge/simple-slack-notify@v1.1.1
+        if: always()
+        with:
+          channel: '#continuous-integration'
+          status: ${{ job.status }}
+          failure_text: 'Building eBL frontend test image #${env.GITHUB_RUN_NUMBER} failed.'
+          fields: |
+            [{"title": "Repository", "value": "${env.GITHUB_REPOSITORY}", "short": true },
+             {"title": "Ref", "value": "${env.GITHUB_REF}", "short": true },
+             {"title": "Action URL", "value": "${env.GITHUB_SERVER_URL}/${env.GITHUB_REPOSITORY}/actions/runs/${env.GITHUB_RUN_ID}"}]
