--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "@typescript-eslint/ban-ts-comment": "warn",
+        "@typescript-eslint/no-unused-vars": "error",
         "react/prop-types": "warn"
     },
     "settings": {
