--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:import/typescript",
+        "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
         "plugin:compat/recommended",
         "plugin:testing-library/react",
