--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lighthouse": "node scripts/lighthouse.js",
     "lint": "eslint --ext .ts,.tsx src/"
@@ -48,8 +48,8 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/lodash": "^4.14.144",
     "@types/node": "^14.0.1",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.2",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.10",
@@ -72,16 +72,16 @@
     "moment-range": "^4.0.1",
     "node-sass": "^4.13.1",
     "query-string": "^6.2.0",
-    "react": "^16.8.0",
+    "react": "^17.0.2",
     "react-ace": "^9.1.1",
     "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.4.0",
+    "react-dom": "^17.0.2",
     "react-image-annotation": "^0.9.10",
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-router-hash-link": "^2.4.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.3",
     "react-select": "^3.0.4",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
@@ -91,14 +91,14 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.3",
-    "@types/jest": "^24.0.25",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@types/jest": "^26.0.21",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "canvas": "^2.6.1",
     "chance": "^1.0.16",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-compat": "^3.5.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest-dom": "^3.2.3",
