--- a/package.json
+++ b/package.json
@@ -85,7 +85,16 @@
     "react-select": "^3.0.4",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-compat": "^3.5.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest-dom": "^3.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-testing-library": "^3.8.0",
+    "prettier": "2.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
@@ -96,14 +105,6 @@
     "@typescript-eslint/parser": "^4.19.0",
     "canvas": "^2.6.1",
     "chance": "^1.0.16",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-compat": "^3.5.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest-dom": "^3.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-testing-library": "^3.8.0",
     "factory-girl": "^5.0.2",
     "husky": "^4.2.5",
     "jest-date-mock": "^1.0.2",
@@ -111,7 +112,6 @@
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
     "lint-staged": "^10.1.3",
-    "prettier": "2.1.1",
     "react-select-event": "^5.0.0"
   },
   "resolutions": {
