--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,9 +79,7 @@ jobs:
         with:        
           build-args: |
             REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
-            REACT_APP_AUTH0_REDIRECT_URI=https://www.ebabylon.org
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
-            REACT_APP_AUTH0_RETURN_TO=https://www.ebabylon.org
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
             REACT_APP_DICTIONARY_API_URL=https://api.ebabylon.org
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
@@ -124,11 +122,9 @@ jobs:
         with:        
           build-args: |
             REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
-            REACT_APP_AUTH0_REDIRECT_URI=https://www.cluster.ebabylon.org
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
-            REACT_APP_AUTH0_RETURN_TO=https://www.cluster.ebabylon.org
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
-            REACT_APP_DICTIONARY_API_URL=https://api.clustes.ebabylon.org
+            REACT_APP_DICTIONARY_API_URL=https://api.cluster.ebabylon.org
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
           context: .
           file: ./Dockerfile
