--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
         
       - uses: docker/login-action@v1 
         with:
-          registry: registry.cluster.ebabylon.org
+          registry: www.ebabylon.org
           username: ${{ secrets.EBL_REGISTRY_USERNAME }}
           password: ${{ secrets.EBL_REGISTRY_PASSWORD }}
 
@@ -81,14 +81,14 @@ jobs:
             REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
-            REACT_APP_DICTIONARY_API_URL=https://api.ebabylon.org
+            REACT_APP_DICTIONARY_API_URL=/api
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            registry.cluster.ebabylon.org/ebl-frontend:master
-            ${{format('registry.cluster.ebabylon.org/ebl-frontend:master.{0}', github.run_number)}}
+            wwww.ebabylon.org/ebl-frontend:master
+            ${{format('www.ebabylon.org/ebl-frontend:master.{0}', github.run_number)}}
       
       - uses: edge/simple-slack-notify@v1.1.1
         if: always()
@@ -113,7 +113,7 @@ jobs:
         
       - uses: docker/login-action@v1 
         with:
-          registry: registry.cluster.ebabylon.org
+          registry: www.ebabylon.org
           username: ${{ secrets.EBL_REGISTRY_USERNAME }}
           password: ${{ secrets.EBL_REGISTRY_PASSWORD }}
 
@@ -124,13 +124,13 @@ jobs:
             REACT_APP_AUTH0_DOMAIN=auth.ebabylon.org
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
-            REACT_APP_DICTIONARY_API_URL=https://api.cluster.ebabylon.org
+            REACT_APP_DICTIONARY_API_URL=/test/api
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            registry.cluster.ebabylon.org/ebl-frontend:test
+            www.ebabylon.org/ebl-frontend:test
       
       - uses: edge/simple-slack-notify@v1.1.1
         if: always()
