--- a/package.json
+++ b/package.json
@@ -58,6 +58,14 @@
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
     "docx": "^5.4.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-compat": "^3.5.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest-dom": "^3.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-testing-library": "^3.8.0",
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
     "file-saver": "^2.0.5",
@@ -71,6 +79,7 @@
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "node-sass": "^4.13.1",
+    "prettier": "2.1.1",
     "query-string": "^6.2.0",
     "react": "^17.0.2",
     "react-ace": "^9.1.1",
@@ -85,16 +94,7 @@
     "react-select": "^3.0.4",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
-    "typescript": "^4.0.2",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-compat": "^3.5.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest-dom": "^3.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-testing-library": "^3.8.0",
-    "prettier": "2.1.1"
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
