--- a/package.json
+++ b/package.json
@@ -92,9 +92,15 @@
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-select": "^3.0.4",
+    "rehype-raw": "^5.1.0",
+    "rehype-stringify": "^8.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.1.0",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "unified": "^9.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
