--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
     "file-saver": "^2.0.5",
+    "hast-util-sanitize": "^4.0.0",
     "html-to-react": "^1.3.4",
     "iconv-lite": "^0.6.2",
     "immer": "^8.0.1",
