--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
     "docx": "^5.4.1",
+    "dompurify": "^2.2.8",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^6.0.0",
@@ -69,7 +70,6 @@
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
     "file-saver": "^2.0.5",
-    "hast-util-sanitize": "^4.0.0",
     "html-to-react": "^1.3.4",
     "iconv-lite": "^0.6.2",
     "immer": "^8.0.1",
