--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
     "docx": "^5.4.1",
+    "dompurify": "^2.2.8",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^6.0.0",
@@ -92,9 +93,15 @@
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-select": "^3.0.4",
+    "rehype-raw": "^5.1.0",
+    "rehype-stringify": "^8.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.1.0",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "unified": "^9.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
