--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "canvas": "^2.6.1",
     "chance": "^1.0.16",
     "factory-girl": "^5.0.2",
+    "fishery": "^1.3.1",
     "husky": "^4.2.5",
     "jest-date-mock": "^1.0.2",
     "jest-environment-jsdom-sixteen": "^1.0.3",
