--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.3",
+    "@types/chance": "^1.1.2",
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
