--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lighthouse": "node scripts/lighthouse.js",
-    "lint": "eslint --ext .ts,.tsx src/"
+    "lint": "eslint --ext .ts,.tsx src/ && stylelint 'src/**/*.css'"
   },
   "name": "ebl-frontend",
   "version": "0.1.0",
@@ -98,6 +98,7 @@
     "remark-rehype": "^8.1.0",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.0.2",
     "unified": "^9.2.1"
   },
@@ -118,7 +119,9 @@
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
     "lint-staged": "^11.0.1",
-    "react-select-event": "^5.0.0"
+    "react-select-event": "^5.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2"
   },
   "resolutions": {
     "@citation-js/plugin-csl": "0.4.0-rc.4"
