--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-select": "^3.0.4",
+    "react-zoom-pan-pinch": "^2.1.3",
     "rehype-raw": "^5.1.0",
     "rehype-stringify": "^8.0.0",
     "remark-html": "^13.0.1",
