--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "src/**/*.js": [
       "prettier --write",
@@ -30,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lighthouse": "node scripts/lighthouse.js",
-    "lint": "eslint --ext .ts,.tsx src/ && stylelint 'src/**/*.css'"
+    "lint": "eslint --ext .ts,.tsx src/ && stylelint 'src/**/*.css'",
+    "prepare": "husky install"
   },
   "name": "ebl-frontend",
   "version": "0.1.0",
@@ -115,7 +111,7 @@
     "chance": "^1.0.16",
     "factory-girl": "^5.0.2",
     "fishery": "^1.3.1",
-    "husky": "^4.2.5",
+    "husky": "^7.0.0",
     "jest-date-mock": "^1.0.2",
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
