--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.10",
-    "big-roman": "^1.0.0",
+    "@types/romans": "^2.0.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.5.3",
     "classnames": "^2.2.6",
@@ -95,6 +95,7 @@
     "remark-rehype": "^8.1.0",
     "remark-sub-super": "^1.0.20",
     "rgb-hex": "^3.0.0",
+    "romans": "^2.0.4",
     "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.0.2",
     "unified": "^9.2.1"
