--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "chance": "^1.0.16",
     "fishery": "^2.1.0",
     "husky": "^7.0.0",
+    "jest-canvas-mock": "^2.3.1",
     "jest-date-mock": "^1.0.2",
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
