--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "yarn": "^1.5.1",
     "node": "^16.0.0"
   },
+  "jest": {
+
+  },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
     "@sentry/react": "^6.2.3",
