--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "yarn": "^1.5.1",
     "node": "^16.0.0"
   },
-  "jest": {
-
-  },
+  "jest": {},
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
     "@sentry/react": "^6.2.3",
@@ -121,6 +119,8 @@
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
     "lint-staged": "^12.1.2",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "react-select-event": "^5.0.0",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3"
