--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "romans": "^2.0.4",
     "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.0.2",
-    "unified": "^9.2.1"
+    "unified": "^9.2.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
@@ -120,8 +122,6 @@
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^6.1.1",
     "lint-staged": "^12.1.2",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "react-select-event": "^5.0.0",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3"
