--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/react-select": "^3.0.10",
     "@types/romans": "^2.0.0",
     "bluebird": "^3.5.2",
-    "citation-js": "^0.5.3",
+    "citation-js": "^0.6.4",
     "classnames": "^2.2.6",
     "docx": "^5.4.1",
     "dompurify": "^2.2.8",
@@ -76,6 +76,8 @@
     "lodash": "^4.17.19",
     "luxon": "^2.3.1",
     "node-sass": "^6.0.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.1.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -101,9 +103,7 @@
     "romans": "^2.0.4",
     "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.0.2",
-    "unified": "^9.2.1",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "unified": "^9.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
