--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-ace": "^9.1.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-image-annotation": "^0.9.10",
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.25.0",
