--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-ace": "^9.1.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-dynamic-sitemap": "^1.2.1",
     "react-ga4": "^2.0.0",
     "react-image-annotation": "^0.9.10",
     "react-markdown": "^4.0.3",
