--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lodash": "^4.17.19",
     "luxon": "^2.5.2",
     "node-sass": "^6.0.1",
+    "pako": "^2.1.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "2.1.1",
@@ -105,7 +106,8 @@
     "romans": "^2.0.4",
     "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.0.2",
-    "unified": "^9.2.1"
+    "unified": "^9.2.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
