--- a/src/auth/applicationScopes.json
+++ b/src/auth/applicationScopes.json
@@ -19,6 +19,7 @@
   "readFWGFolios": "read:FWG-folios",
   "readGSFolios": "read:GS-folios",
   "readILFFolios": "read:ILF-folios",
+  "readJVDFolios": "read:JVD-folios",
   "readJSFolios": "read:JS-folios",
   "readMJGFolios": "read:MJG-folios",
   "readRBFolios": "read:RB-folios",
