--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-dom": "^17.0.2",
     "react-dynamic-sitemap": "^1.2.1",
     "react-ga4": "^2.0.0",
+    "react-helmet-async": "^1.3.0",
     "react-image-annotation": "^0.9.10",
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.25.0",
